--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; SEAMM-ASE Connector 2024.8.2 documentation</title>
+    <title>Index &#8212; SEAMM-ASE Connector 2024.8.2.1 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=429af2e2"></script>
+    <script src="_static/documentation_options.js?v=1e19edff"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/clipboard.min.js?v=a7894cd8"></script>
@@ -425,7 +425,9 @@ document.write(`
 
 <div class="genindex-jumpbox">
  <a href="#C"><strong>C</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#S"><strong>S</strong></a>
  
 </div>
@@ -433,6 +435,14 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.calculate">calculate() (seamm_ase.seamm_ase.SEAMM_Calculator method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.implemented_properties">implemented_properties (seamm_ase.seamm_ase.SEAMM_Calculator attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -449,6 +459,14 @@ document.write(`
         <li><a href="api/seamm_ase.html#module-seamm_ase.seamm_ase">seamm_ase.seamm_ase</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.nolabel">nolabel (seamm_ase.seamm_ase.SEAMM_Calculator attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
