--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; SEAMM-ASE Connector 2024.8.2.1 documentation</title>
+    <title>Index &#8212; SEAMM-ASE Connector 2024.8.17 documentation</title>
   
   
   
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
     <link rel="stylesheet" type="text/css" href="_static/copybutton.css?v=76b2166b" />
-    <link rel="stylesheet" type="text/css" href="_static/sphinx-design.min.css?v=87e54e7c" />
+    <link rel="stylesheet" type="text/css" href="_static/sphinx-design.min.css?v=95c83b7e" />
     <link rel="stylesheet" type="text/css" href="_static/css/custom.css?v=c224919a" />
   
   <!-- Pre-loaded scripts that we'll load fully later -->
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=1e19edff"></script>
+    <script src="_static/documentation_options.js?v=53a1b1fa"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/clipboard.min.js?v=a7894cd8"></script>
@@ -425,6 +425,7 @@ document.write(`
 
 <div class="genindex-jumpbox">
  <a href="#C"><strong>C</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -435,6 +436,20 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.calculate">calculate() (seamm_ase.seamm_ase.SEAMM_Calculator method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.check_state">check_state() (seamm_ase.seamm_ase.SEAMM_Calculator method)</a>
+</li>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.configuration">configuration (seamm_ase.seamm_ase.SEAMM_Calculator property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.get_property">get_property() (seamm_ase.seamm_ase.SEAMM_Calculator method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -464,6 +479,10 @@ document.write(`
 
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.name">name (seamm_ase.seamm_ase.SEAMM_Calculator property)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.nolabel">nolabel (seamm_ase.seamm_ase.SEAMM_Calculator attribute)</a>
 </li>
