--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; SEAMM-ASE Connector 2024.8.17 documentation</title>
+    <title>Index &#8212; SEAMM-ASE Connector 2024.10.20 documentation</title>
   
   
   
@@ -37,8 +37,8 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=53a1b1fa"></script>
-    <script src="_static/doctools.js?v=9a2dae69"></script>
+    <script src="_static/documentation_options.js?v=b88505f4"></script>
+    <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/clipboard.min.js?v=a7894cd8"></script>
     <script src="_static/copybutton.js?v=f281be69"></script>
@@ -424,14 +424,32 @@ document.write(`
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#C"><strong>C</strong></a>
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#C"><strong>C</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.ASE_mixin.ase_atoms">ase_atoms() (seamm_ase.seamm_ase.ASE_mixin method)</a>
+</li>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.ASE_mixin.ase_calculator">ase_calculator() (seamm_ase.seamm_ase.ASE_mixin method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.ASE_mixin">ASE_mixin (class in seamm_ase.seamm_ase)</a>
+</li>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.ASE_mixin.ase_read_bibliography">ase_read_bibliography() (seamm_ase.seamm_ase.ASE_mixin method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -485,6 +503,18 @@ document.write(`
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.SEAMM_Calculator.nolabel">nolabel (seamm_ase.seamm_ase.SEAMM_Calculator attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.ASE_mixin.run_ase_Hessian">run_ase_Hessian() (seamm_ase.seamm_ase.ASE_mixin method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/seamm_ase.html#seamm_ase.seamm_ase.ASE_mixin.run_ase_optimizer">run_ase_optimizer() (seamm_ase.seamm_ase.ASE_mixin method)</a>
 </li>
   </ul></td>
 </tr></table>
